# api_work

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
yoga_app/: main.py
yoga_app/api/: api.py  content.py
yoga_app/ml/: core.py
