[tool.poetry]
name = "yoga_app"
version = "0.1.0"
description = ""
authors = ["Aditi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
mediapipe = "0.9.2.1"
numpy = "^1.24.2"
python-multipart = "^0.0.6"
opencv-python = "3.4.17.61"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
